# devcast

./: .dockerignore  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  PRD.md  README.md  bookmarks.json  comments_1kpk91osr.json  comments_NFvn6aCw2.json  comments_ggig3ka2f.json  openapi.json  post_1kpk91osr.json  post_NFvn6aCw2.json  post_ggig3ka2f.json
backend/: .env.example  main.py  proxy.py  pyproject.toml
backend/routers/: bookmarks.py  episodes.py  extract.py  finalize.py  posts.py  script.py
backend/static/: index.html
backend/templates/: episode.html  episode_404.html  episode_503.html
backend/tests/: conftest.py  test_bookmark_proxy.py  test_episodes.py  test_extract.py  test_finalize.py  test_scaffold.py  test_script.py
docs/adr/: 001-uvicorn-not-mangum.md  002-proxy-dailydev-via-fastapi.md  003-script-sse-meta-and-chunk-events.md  004-s3-only-no-database.md  005-gpt4o-content-cleaning.md  006-host-names-and-voice-mapping.md  007-monorepo-single-container.md  008-s3-bucket-public-access.md  009-secrets-and-aws-credentials.md  010-finalize-upload-and-sse-protocol.md  011-failure-model-v1.md  012-frontend-navigation-pagination-and-testing.md  013-ecs-express-mode-not-app-runner.md  014-backend-module-organisation.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: BookmarksScreen.test.tsx  BookmarksScreen.tsx  PreviewScreen.test.tsx  PreviewScreen.tsx  ProgressScreen.test.tsx  ProgressScreen.tsx  WizardScreen.test.tsx  WizardScreen.tsx
